--- a/css/LoginPageStyle.css
+++ b/css/LoginPageStyle.css
@@ -6,7 +6,7 @@ body {
   color:white;
   font-size:12px;
   background:#f3c9f3;
-  width: 1340px;
+  /*width: 1340px;*/
 }
 #bodycontent{
     position: relative;
@@ -15,12 +15,12 @@ body {
 #contain{
         z-index: 0;
 	background-size:1340px auto;
-	width:100%;
-	height:700px;
-	position:fixed;
+	/*width:100%;
+	height:700px;*/
+	/*position:fixed;*/
 	opacity:0.7;
-	margin-top:-30px;
-        
+	/*margin-top:-30px;*/
+
 }
 #batimg2{
     z-index: 1;
@@ -87,10 +87,10 @@ body {
 }
 
 #toptabmenu ul li a {
-    
+
 	float: left;
 	display: block;
-	
+
 	height: 50px;
         line-height: 50px;
 	padding: 0px 30px 0 0;
@@ -99,7 +99,7 @@ body {
 	font-size: 29px;
 	text-align: center;
 	text-decoration: none;
-	color: #333;	
+	color: #333;
 	outline: none;
         border-left: medium solid #b80af9;
 }
@@ -107,7 +107,7 @@ body {
 #toptabmenu ul li a:hover, #toptabmenu ul li .current {
 	color: #fff;
         background: linear-gradient(left, #111, #444, #b6b6b8, #444, #111);
-       
+
 }
 
 .mainbox {
@@ -164,7 +164,7 @@ body {
   transform:rotate(70deg);
   -webkit-transform:rotate(70deg);
   background:linear-gradient(50deg, rgba(255,255,255,0.25), rgba(0,0,0,0));
-  
+
 }
 
 
@@ -203,7 +203,7 @@ body {
 }
 
 .loginset {
- 	padding:20px; 
+ 	padding:20px;
   border-top:1px solid #19191a;
 }
 
@@ -228,24 +228,24 @@ body {
   transform:rotate(70deg);
   -webkit-transform:rotate(70deg);
   background:linear-gradient(50deg, rgba(255,255,255,0.55), rgba(204,204,204,0));
-  
+
 }
 
 
 .Ltext {
-    color:darkmagenta;
+    /*color:darkmagenta;
         font-size: 20px;
         font-family: "Berkshire Swash",cursive;
   display:block;
-  padding-bottom:0px;
+  padding-bottom:0px;*/
 }
 
 .loginput[type=text],
 .loginput[type=password], #Comment {
-    color:#ffff99;
+  /*  color:#ffff99;
  	width:100%;
   padding:8px 5px;
-  
+
   background:linear-gradient(#999999, #666666);
   border:1px solid #222;
   box-shadow:
@@ -253,7 +253,8 @@ body {
   border-radius:0.3em;
   margin-bottom:10px;
   margin-top:10px;
-  
+
+*/
 
 }
 .ddlist{
@@ -265,12 +266,12 @@ body {
     outline-color: #dceefc;
     outline-offset: 0;
   }
-  
+
   #Comment{
       font-size: 20px;
       color: #00ff00;
   }
-  
+
   #Comment:focus{
        box-shadow:1px 1px 4px 2px #FFFF66;
     outline-color: #dceefc;
@@ -278,13 +279,13 @@ body {
   }
 
 .loginput[type=checkbox] {
- 	display:inline-block;
+ 	/*display:inline-block;
   vertical-align:top;
-  margin-top: 2px;
+  margin-top: 2px;*/
 }
 
 .p-container {
- 	padding:0 20px 20px 20px; 
+ 	/*padding:0 20px 20px 20px;*/
 }
 
 .p-container:after {
@@ -366,7 +367,7 @@ body {
 #content-slider {
 	width:100%;
 	height:330px;
-      
+
 }
 .b{overflow: hidden;}
 #slider {
@@ -394,24 +395,24 @@ body {
 }
 
 #slider li.firstanimation {
-	-moz-animation:cycle 25s linear infinite;	
-	-webkit-animation:cycle 25s linear infinite;		
+	-moz-animation:cycle 25s linear infinite;
+	-webkit-animation:cycle 25s linear infinite;
 }
 #slider li.secondanimation {
 	-moz-animation:cycletwo 25s linear infinite;
-	-webkit-animation:cycletwo 25s linear infinite;		
+	-webkit-animation:cycletwo 25s linear infinite;
 }
 #slider li.thirdanimation {
 	-moz-animation:cyclethree 25s linear infinite;
-	-webkit-animation:cyclethree 25s linear infinite;		
+	-webkit-animation:cyclethree 25s linear infinite;
 }
 #slider li.fourthanimation {
 	-moz-animation:cyclefour 25s linear infinite;
-	-webkit-animation:cyclefour 25s linear infinite;		
+	-webkit-animation:cyclefour 25s linear infinite;
 }
 #slider li.fifthanimation {
 	-moz-animation:cyclefive 25s linear infinite;
-	-webkit-animation:cyclefive 25s linear infinite;		
+	-webkit-animation:cyclefive 25s linear infinite;
 }
 
 div.ex
@@ -440,7 +441,7 @@ margin:0px;
     padding-left: 30px;
 }
 #rightpanel{
-  
+
 width:500px;
 padding-top:15px;
 padding-left: 25px;
@@ -468,7 +469,7 @@ float:left;}
         color:gold;
         font-weight: bold;
         font-size:24px;
-        
+
     }
 #faq p{
      font-family:"HelveticaNeue-Light" ;
@@ -521,23 +522,23 @@ text-shadow: 0px -1px 4px white,0px -2px 7px yellow,0px -5px 10px #ff8000,0px -1
 z-index: 4;
 }
 #nav ul li{
-    padding-top:1px; 
+    padding-top:1px;
     display:block;
     }
     #nav ul li a{font-size:12px;
     font-family: "Lucida Calligraphy";
     border-color:red;
     }
-#nav li:hover ul{ 
+#nav li:hover ul{
    left:700.5px;
    top:210px;
 }
-#nav ul li:hover { 
+#nav ul li:hover {
     background:#fff;
-    
+
 }
 
-#nav ul li a:hover{ 
+#nav ul li a:hover{
     background:#333;
     text-align:left;
     width:100%;
@@ -550,25 +551,25 @@ z-index: 4;
 z-index:4;
 }
 #nav ul ul li{
-    padding-top:1px; 
+    padding-top:1px;
     display:block;
     }
     #nav ul ul li a{font-size:12px;
     border-color:red;}
-    #nav li:hover ul ul{ 
+    #nav li:hover ul ul{
    left:-2600px;
-   
+
 }
-#nav li:hover ul li:hover ul{ 
+#nav li:hover ul li:hover ul{
    left:885px;
    top:259px;
 }
-#nav ul ul li:hover { 
+#nav ul ul li:hover {
     background:#fff;
-    
+
 }
 
-#nav ul ul li a:hover{ 
+#nav ul ul li a:hover{
     background:#333;
     text-align:left;
     width:100%;
@@ -644,7 +645,7 @@ text-shadow: 0 0 5px #fff,
 text-shadow: 0 0 5px #fff,
                    0 0 10px #fff,
                    0 0 20px #f00,
-                   0 0 30px #f00;     
+                   0 0 30px #f00;
 }
 }
 @-moz-keyframes shine
@@ -660,39 +661,39 @@ text-shadow: 0 0 5px #fff,
 text-shadow: 0 0 5px #fff,
                    0 0 10px #fff,
                    0 0 20px #f00,
-                   0 0 30px #f00;     
+                   0 0 30px #f00;
 }
 }
 
 @-moz-keyframes cycle {
 	0%  { right:0px; }
-	4%  { right:0px; } 
-	16% { right:0px; opacity:1;} 
-	20% { right:325px; opacity:0;} 
+	4%  { right:0px; }
+	16% { right:0px; opacity:1;}
+	20% { right:325px; opacity:0;}
 	21% { right:-325px; opacity:0;}
 	92% { right:-325px; opacity:0;}
 	96% { right:-325px; opacity:0; }
 	100%{ right:0px; opacity:1; }
-	
+
 }
 @-moz-keyframes cycletwo {
 	0%  { right:-325px; opacity:0; }
 	16% { right:-325px; opacity:0; }
 	20% { right:0px; opacity:1; }
-	24% { right:0px; opacity:1; } 
-	36% { right:0px; opacity:1; } 
+	24% { right:0px; opacity:1; }
+	36% { right:0px; opacity:1; }
 	40% { right:325px; opacity:0; }
-	41% { right:-325px; opacity:0;} 
+	41% { right:-325px; opacity:0;}
 	100%{ right:-325px; opacity:0;}
 }
 @-moz-keyframes cyclethree {
 	0%  { right:-325px; opacity:0; }
 	36% { right:-325px; opacity:0; }
 	40% { right:0px; opacity:1; }
-	44% { right:0px; opacity:1; } 
-	56% { right:0px; opacity:1; } 
+	44% { right:0px; opacity:1; }
+	56% { right:0px; opacity:1; }
 	60% { right:325px; opacity:0; }
-	61% { right:-325px; opacity:0;} 
+	61% { right:-325px; opacity:0;}
 	100%{ right:-325px; opacity:0;}
 }
 @-moz-keyframes cyclefour {
@@ -717,32 +718,32 @@ text-shadow: 0 0 5px #fff,
 @-webkit-keyframes cycle {
 	0%  { right:0px; }
 	4%  { right:0px; }
-	16% { right:0px; opacity:1;} 
+	16% { right:0px; opacity:1;}
 	20% { right:325px; opacity:0;}
 	21% { right:-325px; opacity:0;}
 	50% { right:-325px; opacity:0; }
 	92% { right:-325px; opacity:0; }
 	96% { right:-325px; opacity:0; }
 	100%{ right:0px; opacity:1; }
-	
+
 }
 @-webkit-keyframes cycletwo {
 	0%  { right:-325px; opacity:0; }
 	16% { right:-325px; opacity:0; }
 	20% { right:0px; opacity:1; }
-	24% { right:0px; opacity:1; } 
-	36% { right:0px; opacity:1;  } 
+	24% { right:0px; opacity:1; }
+	36% { right:0px; opacity:1;  }
 	40% { right:325px; opacity:0; }
-	41% { right:-325px; opacity:0;  }  
+	41% { right:-325px; opacity:0;  }
 	100%{ right:-325px; opacity:0; }
 }
 @-webkit-keyframes cyclethree {
 	0%  { right:-325px; opacity:0; }
 	36% { right:-325px; opacity:0; }
 	40% { right:0px; opacity:1; }
-	44% { right:0px; opacity:1; } 
-	56% { right:0px; opacity:1;  } 
-	60% { right:325px; opacity:0;  } 
+	44% { right:0px; opacity:1; }
+	56% { right:0px; opacity:1;  }
+	60% { right:325px; opacity:0;  }
 	61% { right:-325px; opacity:0; }
 	100%{ right:-325px; opacity:0;  }
 }
@@ -777,5 +778,3 @@ text-shadow: 0 0 5px #fff,
 30%{opacity:0;}
 99%{opacity:0;}
 100%{opacity:0;}}
-
-
